@@ -3316,7 +3316,8 @@ newscripts_longdesc=Description
 newscripts_avail=Available?
 newscripts_core=Virtualmin
 newscripts_custom=Third-party
-newscripts_plugin=Virtualmin
+newscripts_plugin=Plugin
+newscripts_latest=Updates
 newscripts_disable=Disable Selected
 newscripts_enable=Enable Selected
 newscripts_install=Add Installer
