@@ -1148,3 +1148,4 @@ When editing default scripts in a template, an option to always install the late
 Added a bandwidth monitoring option to include relayed email, thanks to Collin from Bisnet.
 ---- Changes since 3.72 ----
 On Sendmail systems with outgoing address mapping enabled, the generic domains file is now correctly updated.
+Script installer versions more recent that those included with the current release of Virtualmin can now be downloaded using the Installer Updates section on the Script Installers page. The new versions will typically be released within hours or days of new script releases.
